[tool.poetry]
name = "audioflex"
version = "0.1.0"
description = ""
authors = ["ryanlinjui <ryanlinjui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
librosa = "^0.10.2.post1"
numpy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
